<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_display_aciton"
            android:icon="@drawable/ic_baseline_addchart_24"
            android:title="@string/last_aciont" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_add_oppertunite"
            android:visible="false"
            android:icon="@drawable/ic_baseline_addchart_24"
            android:title="@string/add_oppertunite" />

        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_addchart_24"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_op"
            android:icon="@drawable/ic_baseline_addchart_24"
            android:title="@string/opppertunite" />

        <item
            android:id="@+id/profile_user"
            android:icon="@drawable/ic_baseline_account_box_24"
            android:title="@string/user_profile" />
        <item
            android:id="@+id/all_user"
            android:icon="@drawable/ic_baseline_supervised_user_circle_24"
            android:title="@string/users" />
        <item
            android:id="@+id/all_status"
            android:icon="@drawable/ic_baseline_addchart_24"
            android:title="@string/Status" />

        <item
            android:id="@+id/log_out"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout" />


    </group>
</menu>